@@ -1,3 +1,7 @@
+2010-10-11 Dario Rodriguez <dario.rodriguez@artica.es>
+
+	* include/functions_io.php: Fixed problem with SQL injection, with the 
+	same code in trunk version.
 
 2010-10-08 Sancho Lerena <slerena@artica.es>
 
